# loan

./: .flake8  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: django.yml
contrib/: env-sample
fintech/: asgi.py  settings.py  urls.py  wsgi.py
fintech/api/: admin.py  amount.py  models.py  serializers.py  views.py
fintech/api/migrations/: 0001_initial.py  0002_auto_20201017_0021.py  0002_emprestimo_cliente.py  0003_auto_20201017_0028.py
fintech/core/: admin.py  apps.py
fintech/core/migrations/: 0001_initial.py
fintech/tests/: test_project_version.py  test_wsgi.py
