[tool.poetry]
name = "loan"
version = "0.1.0"
description = "API REST desenvolvida para gerenciar empréstimos."
authors = ["alisonamerico <alison.americo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
