[tool.poetry]
name = "loan"
version = "0.1.0"
description = "API REST desenvolvida para gerenciar empréstimos."
authors = ["alisonamerico <alison.americo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.2"
gunicorn = "^20.0.4"
python-decouple = "^3.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
